Some more stuff showing on the screen

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.19.2",
     "moment": "^2.25.3",
     "react": "^16.13.1",
+    "react-css-grid": "^2.0.0-0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
